--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -27,6 +27,7 @@
 
 
 
+
 body,
 input,
 textarea,
@@ -787,6 +788,7 @@ h6,
 }
 #msg-box3-3d .lead DIV {
   text-align: left;
+  font-family: 'Raleway', sans-serif;
 }
 #content2-3q BLOCKQUOTE {
   font-family: 'Raleway', sans-serif;
@@ -960,142 +962,6 @@ h6,
 #footer1-q P {
   font-size: 14px;
 }
-#ext_menu-r .hide-buttons .nav-btn {
-  display: none !important;
-}
-#ext_menu-r .navbar-caption {
-  color: #ffffff;
-  font-size: 20px;
-}
-#ext_menu-r .navbar-toggler {
-  color: #ffffff;
-}
-#ext_menu-r .close-icon::before,
-#ext_menu-r .close-icon::after {
-  background-color: #ffffff;
-}
-#ext_menu-r .link,
-#ext_menu-r .dropdown-item {
-  color: #ffffff;
-}
-#ext_menu-r .link {
-  font-size: 0.75rem;
-}
-#ext_menu-r .dropdown-item,
-#ext_menu-r .nav-dropdown-sm .link {
-  font-size: 0.812rem;
-}
-#ext_menu-r .link:hover,
-#ext_menu-r .dropdown-item:hover,
-#ext_menu-r .link:focus,
-#ext_menu-r .dropdown-item:focus {
-  color: #e25041;
-}
-#ext_menu-r .link[aria-expanded="true"],
-#ext_menu-r .dropdown-menu {
-  background: #075c20;
-}
-#ext_menu-r .nav-dropdown-sm .link:focus,
-#ext_menu-r .nav-dropdown-sm .link:hover,
-#ext_menu-r .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-r .nav-dropdown-sm .dropdown-item:hover {
-  background: #097e2b!important;
-}
-#ext_menu-r .navbar,
-#ext_menu-r .nav-dropdown-sm,
-#ext_menu-r .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-r .nav-dropdown-sm .dropdown-menu {
-  background: #0a8c30;
-}
-#ext_menu-r .bg-color.transparent .link {
-  color: #ffffff;
-  transition: none;
-}
-#ext_menu-r .bg-color.transparent.opened .link {
-  transition: color 0.2s ease-in-out;
-}
-#ext_menu-r .bg-color.transparent.opened .link:hover,
-#ext_menu-r .bg-color.transparent.opened .link:focus {
-  color: #e25041;
-}
-#ext_menu-r .link[aria-expanded="true"],
-#ext_menu-r .dropdown-item[aria-expanded="true"] {
-  color: #e25041!important;
-}
-#ext_menu-r .btn {
-  font-size: 12px;
-}
-#footer1-s P {
-  font-size: 14px;
-}
-#ext_menu-t .hide-buttons .nav-btn {
-  display: none !important;
-}
-#ext_menu-t .navbar-caption {
-  color: #ffffff;
-  font-size: 20px;
-}
-#ext_menu-t .navbar-toggler {
-  color: #ffffff;
-}
-#ext_menu-t .close-icon::before,
-#ext_menu-t .close-icon::after {
-  background-color: #ffffff;
-}
-#ext_menu-t .link,
-#ext_menu-t .dropdown-item {
-  color: #ffffff;
-}
-#ext_menu-t .link {
-  font-size: 0.75rem;
-}
-#ext_menu-t .dropdown-item,
-#ext_menu-t .nav-dropdown-sm .link {
-  font-size: 0.812rem;
-}
-#ext_menu-t .link:hover,
-#ext_menu-t .dropdown-item:hover,
-#ext_menu-t .link:focus,
-#ext_menu-t .dropdown-item:focus {
-  color: #e25041;
-}
-#ext_menu-t .link[aria-expanded="true"],
-#ext_menu-t .dropdown-menu {
-  background: #075c20;
-}
-#ext_menu-t .nav-dropdown-sm .link:focus,
-#ext_menu-t .nav-dropdown-sm .link:hover,
-#ext_menu-t .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-t .nav-dropdown-sm .dropdown-item:hover {
-  background: #097e2b!important;
-}
-#ext_menu-t .navbar,
-#ext_menu-t .nav-dropdown-sm,
-#ext_menu-t .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-t .nav-dropdown-sm .dropdown-menu {
-  background: #0a8c30;
-}
-#ext_menu-t .bg-color.transparent .link {
-  color: #ffffff;
-  transition: none;
-}
-#ext_menu-t .bg-color.transparent.opened .link {
-  transition: color 0.2s ease-in-out;
-}
-#ext_menu-t .bg-color.transparent.opened .link:hover,
-#ext_menu-t .bg-color.transparent.opened .link:focus {
-  color: #e25041;
-}
-#ext_menu-t .link[aria-expanded="true"],
-#ext_menu-t .dropdown-item[aria-expanded="true"] {
-  color: #e25041!important;
-}
-#ext_menu-t .btn {
-  font-size: 12px;
-}
-#footer1-u P {
-  font-size: 14px;
-}
 
 
 
@@ -1132,19 +998,19 @@ h6,
 }
 #ext_menu-v .link[aria-expanded="true"],
 #ext_menu-v .dropdown-menu {
-  background: #075c20;
+  background: #1f5087;
 }
 #ext_menu-v .nav-dropdown-sm .link:focus,
 #ext_menu-v .nav-dropdown-sm .link:hover,
 #ext_menu-v .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-v .nav-dropdown-sm .dropdown-item:hover {
-  background: #097e2b!important;
+  background: #2662a4!important;
 }
 #ext_menu-v .navbar,
 #ext_menu-v .nav-dropdown-sm,
 #ext_menu-v .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-v .nav-dropdown-sm .dropdown-menu {
-  background: #0a8c30;
+  background: #2969b0;
 }
 #ext_menu-v .bg-color.transparent .link {
   color: #ffffff;
@@ -1211,19 +1077,19 @@ h6,
 }
 #ext_menu-x .link[aria-expanded="true"],
 #ext_menu-x .dropdown-menu {
-  background: #075c20;
+  background: #1f5087;
 }
 #ext_menu-x .nav-dropdown-sm .link:focus,
 #ext_menu-x .nav-dropdown-sm .link:hover,
 #ext_menu-x .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-x .nav-dropdown-sm .dropdown-item:hover {
-  background: #097e2b!important;
+  background: #2662a4!important;
 }
 #ext_menu-x .navbar,
 #ext_menu-x .nav-dropdown-sm,
 #ext_menu-x .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-x .nav-dropdown-sm .dropdown-menu {
-  background: #0a8c30;
+  background: #2969b0;
 }
 #ext_menu-x .bg-color.transparent .link {
   color: #ffffff;
@@ -1279,19 +1145,19 @@ h6,
 }
 #ext_menu-z .link[aria-expanded="true"],
 #ext_menu-z .dropdown-menu {
-  background: #075c20;
+  background: #1f5087;
 }
 #ext_menu-z .nav-dropdown-sm .link:focus,
 #ext_menu-z .nav-dropdown-sm .link:hover,
 #ext_menu-z .nav-dropdown-sm .dropdown-item:focus,
 #ext_menu-z .nav-dropdown-sm .dropdown-item:hover {
-  background: #097e2b!important;
+  background: #2662a4!important;
 }
 #ext_menu-z .navbar,
 #ext_menu-z .nav-dropdown-sm,
 #ext_menu-z .nav-dropdown-sm .link[aria-expanded="true"],
 #ext_menu-z .nav-dropdown-sm .dropdown-menu {
-  background: #0a8c30;
+  background: #2969b0;
 }
 #ext_menu-z .bg-color.transparent .link {
   color: #ffffff;
@@ -1313,182 +1179,4 @@ h6,
 }
 #footer1-10 P {
   font-size: 14px;
-}
-
-
-
-#content5-2f .mbr-section-title,
-#content5-2f p {
-  color: #fff;
-}
-#content5-2f .mbr-section-title {
-  font-size: 30px;
-  font-family: 'Raleway', sans-serif;
-}
-#content5-2f DIV {
-  color: #ffffff;
-  font-size: 22px;
-}
-#ext_menu-2d .hide-buttons .nav-btn {
-  display: none !important;
-}
-#ext_menu-2d .navbar-caption {
-  color: #ffffff;
-  font-size: 20px;
-}
-#ext_menu-2d .navbar-toggler {
-  color: #ffffff;
-}
-#ext_menu-2d .close-icon::before,
-#ext_menu-2d .close-icon::after {
-  background-color: #ffffff;
-}
-#ext_menu-2d .link,
-#ext_menu-2d .dropdown-item {
-  color: #ffffff;
-}
-#ext_menu-2d .link {
-  font-size: 0.75rem;
-}
-#ext_menu-2d .dropdown-item,
-#ext_menu-2d .nav-dropdown-sm .link {
-  font-size: 0.812rem;
-}
-#ext_menu-2d .link:hover,
-#ext_menu-2d .dropdown-item:hover,
-#ext_menu-2d .link:focus,
-#ext_menu-2d .dropdown-item:focus {
-  color: #e25041;
-}
-#ext_menu-2d .link[aria-expanded="true"],
-#ext_menu-2d .dropdown-menu {
-  background: #075c20;
-}
-#ext_menu-2d .nav-dropdown-sm .link:focus,
-#ext_menu-2d .nav-dropdown-sm .link:hover,
-#ext_menu-2d .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-2d .nav-dropdown-sm .dropdown-item:hover {
-  background: #097e2b!important;
-}
-#ext_menu-2d .navbar,
-#ext_menu-2d .nav-dropdown-sm,
-#ext_menu-2d .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-2d .nav-dropdown-sm .dropdown-menu {
-  background: #0a8c30;
-}
-#ext_menu-2d .bg-color.transparent .link {
-  color: #ffffff;
-  transition: none;
-}
-#ext_menu-2d .bg-color.transparent.opened .link {
-  transition: color 0.2s ease-in-out;
-}
-#ext_menu-2d .bg-color.transparent.opened .link:hover,
-#ext_menu-2d .bg-color.transparent.opened .link:focus {
-  color: #e25041;
-}
-#ext_menu-2d .link[aria-expanded="true"],
-#ext_menu-2d .dropdown-item[aria-expanded="true"] {
-  color: #e25041!important;
-}
-#ext_menu-2d .btn {
-  font-size: 12px;
-}
-#content1-2h DIV {
-  font-size: 18px;
-}
-#extHeader10-2i H3 {
-  font-family: 'Raleway', sans-serif;
-  font-size: 25px;
-}
-#extHeader10-2i P {
-  font-family: 'Raleway', sans-serif;
-  font-size: 18px;
-}
-#footer1-2e P {
-  font-size: 14px;
-}
-
-#ext_menu-2j .hide-buttons .nav-btn {
-  display: none !important;
-}
-#ext_menu-2j .navbar-caption {
-  color: #ffffff;
-  font-size: 20px;
-}
-#ext_menu-2j .navbar-toggler {
-  color: #ffffff;
-}
-#ext_menu-2j .close-icon::before,
-#ext_menu-2j .close-icon::after {
-  background-color: #ffffff;
-}
-#ext_menu-2j .link,
-#ext_menu-2j .dropdown-item {
-  color: #ffffff;
-}
-#ext_menu-2j .link {
-  font-size: 0.75rem;
-}
-#ext_menu-2j .dropdown-item,
-#ext_menu-2j .nav-dropdown-sm .link {
-  font-size: 0.812rem;
-}
-#ext_menu-2j .link:hover,
-#ext_menu-2j .dropdown-item:hover,
-#ext_menu-2j .link:focus,
-#ext_menu-2j .dropdown-item:focus {
-  color: #e25041;
-}
-#ext_menu-2j .link[aria-expanded="true"],
-#ext_menu-2j .dropdown-menu {
-  background: #075c20;
-}
-#ext_menu-2j .nav-dropdown-sm .link:focus,
-#ext_menu-2j .nav-dropdown-sm .link:hover,
-#ext_menu-2j .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-2j .nav-dropdown-sm .dropdown-item:hover {
-  background: #097e2b!important;
-}
-#ext_menu-2j .navbar,
-#ext_menu-2j .nav-dropdown-sm,
-#ext_menu-2j .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-2j .nav-dropdown-sm .dropdown-menu {
-  background: #0a8c30;
-}
-#ext_menu-2j .bg-color.transparent .link {
-  color: #ffffff;
-  transition: none;
-}
-#ext_menu-2j .bg-color.transparent.opened .link {
-  transition: color 0.2s ease-in-out;
-}
-#ext_menu-2j .bg-color.transparent.opened .link:hover,
-#ext_menu-2j .bg-color.transparent.opened .link:focus {
-  color: #e25041;
-}
-#ext_menu-2j .link[aria-expanded="true"],
-#ext_menu-2j .dropdown-item[aria-expanded="true"] {
-  color: #e25041!important;
-}
-#ext_menu-2j .btn {
-  font-size: 12px;
-}
-#footer1-2k P {
-  font-size: 14px;
-}
-#msg-box3-2p .mbr-section-title,
-#msg-box3-2p p {
-  color: #000;
-}
-#msg-box3-2p .mbr-section-title {
-  font-family: 'Raleway', sans-serif;
-  font-size: 32px;
-}
-#msg-box3-2p .lead P {
-  font-size: 22px;
-  color: #2969b0;
-}
-#msg-box3-2p .lead DIV {
-  color: #2969b0;
 }
