--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,8 +1,7 @@
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
-
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
 
 
 
@@ -781,14 +780,11 @@ h6,
 #ext_menu-2 .btn {
   font-size: 12px;
 }
-#extCountdown1-33 .mbr-section-title DIV {
-  font-size: 24px;
-  color: #000000;
-  font-family: 'Source Sans Pro', sans-serif;
+#extHeader15-51 P {
+  font-family: 'Lato', sans-serif;
 }
-#extCountdown1-33 .mbr-section-title {
-  font-family: 'Raleway', sans-serif;
-  font-size: 22px;
+#extHeader15-51 SPAN {
+  font-size: 23px;
 }
 #content2-3q BLOCKQUOTE {
   font-family: 'Raleway', sans-serif;
