--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -786,6 +786,17 @@ h6,
 #extHeader15-51 SPAN {
   font-size: 23px;
 }
+#extHeader3-58 H3 {
+  font-size: 32px;
+  text-align: center;
+}
+#extHeader3-58 P {
+  font-size: 18px;
+  text-align: center;
+}
+#extHeader3-58 DIV {
+  text-align: left;
+}
 #content2-3q BLOCKQUOTE {
   font-family: 'Raleway', sans-serif;
 }
