--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
 
 
@@ -1229,298 +1228,6 @@ h6,
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#ext_menu-3s .hide-buttons .nav-btn {
-  display: none !important;
-}
-#ext_menu-3s .navbar-caption {
-  color: #ffffff;
-  font-size: 20px;
-}
-#ext_menu-3s .navbar-toggler {
-  color: #ffffff;
-}
-#ext_menu-3s .close-icon::before,
-#ext_menu-3s .close-icon::after {
-  background-color: #ffffff;
-}
-#ext_menu-3s .link,
-#ext_menu-3s .dropdown-item {
-  color: #ffffff;
-}
-#ext_menu-3s .link {
-  font-size: 0.75rem;
-}
-#ext_menu-3s .dropdown-item,
-#ext_menu-3s .nav-dropdown-sm .link {
-  font-size: 0.812rem;
-}
-#ext_menu-3s .link:hover,
-#ext_menu-3s .dropdown-item:hover,
-#ext_menu-3s .link:focus,
-#ext_menu-3s .dropdown-item:focus {
-  color: #e25041;
-}
-#ext_menu-3s .link[aria-expanded="true"],
-#ext_menu-3s .dropdown-menu {
-  background: #1f5087;
-}
-#ext_menu-3s .nav-dropdown-sm .link:focus,
-#ext_menu-3s .nav-dropdown-sm .link:hover,
-#ext_menu-3s .nav-dropdown-sm .dropdown-item:focus,
-#ext_menu-3s .nav-dropdown-sm .dropdown-item:hover {
-  background: #2662a4!important;
-}
-#ext_menu-3s .navbar,
-#ext_menu-3s .nav-dropdown-sm,
-#ext_menu-3s .nav-dropdown-sm .link[aria-expanded="true"],
-#ext_menu-3s .nav-dropdown-sm .dropdown-menu {
-  background: #2969b0;
-}
-#ext_menu-3s .bg-color.transparent .link {
-  color: #ffffff;
-  transition: none;
-}
-#ext_menu-3s .bg-color.transparent.opened .link {
-  transition: color 0.2s ease-in-out;
-}
-#ext_menu-3s .bg-color.transparent.opened .link:hover,
-#ext_menu-3s .bg-color.transparent.opened .link:focus {
-  color: #e25041;
-}
-#ext_menu-3s .link[aria-expanded="true"],
-#ext_menu-3s .dropdown-item[aria-expanded="true"] {
-  color: #e25041!important;
-}
-#ext_menu-3s .btn {
-  font-size: 12px;
-}
-#extCountdown1-3t .mbr-section-title DIV {
-  font-size: 22px;
-  color: #000000;
-  font-family: 'Source Sans Pro', sans-serif;
-}
-#extCountdown1-3t .mbr-section-title {
-  font-family: 'Raleway', sans-serif;
-  font-size: 22px;
-}
-#content5-3u .mbr-section-title,
-#content5-3u p {
-  color: #fff;
-}
-#msg-box3-3v .mbr-section-title,
-#msg-box3-3v p {
-  color: #000;
-}
-#msg-box3-3v .mbr-section-title {
-  font-size: 23px;
-  font-family: 'Raleway', sans-serif;
-  text-align: left;
-}
-#msg-box3-3v .lead P {
-  text-align: left;
-}
-#msg-box3-3v .lead {
-  text-align: left;
-}
-#msg-box3-3v .lead DIV {
-  text-align: left;
-  font-family: 'Raleway', sans-serif;
-}
-#content2-3w BLOCKQUOTE {
-  font-family: 'Raleway', sans-serif;
-}
-#extFeatures1-3x .mbr-section-title {
-  color: #fff;
-  font-size: 30px;
-}
-#extFeatures1-3x P {
-  font-size: 19px;
-}
-#extMsg-box4-3z SPAN {
-  font-size: 24px;
-  font-family: 'Raleway', sans-serif;
-}
-#extMsg-box4-3z P {
-  font-family: 'Raleway', sans-serif;
-  font-size: 18px;
-}
-#msg-box1-40 H2 {
-  font-family: 'Raleway', sans-serif;
-  color: #000000;
-  text-align: left;
-}
-#msg-box1-40 H3 {
-  font-family: 'Raleway', sans-serif;
-  font-size: 23px;
-}
-#msg-box1-40 SPAN {
-  font-size: 17px;
-  color: #1141f4;
-}
-#content1-41 DIV {
-  text-align: left;
-  color: #ffffff;
-}
-#content1-41 P {
-  text-align: left;
-  color: #ffffff;
-}
-#extTable1-42 .mbr-section-title {
-  color: #ffffff;
-  font-size: 22px;
-  font-family: 'Raleway', sans-serif;
-}
-#extTable1-42 TH {
-  color: #ffffff;
-  font-size: 17px;
-}
-#extTable1-42 TD {
-  color: #ffffff;
-  font-size: 17px;
-}
-#extTable1-42 B {
-  color: #f7da64;
-  font-size: 20px;
-}
-#content2-43 BLOCKQUOTE {
-  font-family: 'Raleway', sans-serif;
-}
-#extTable1-44 .mbr-section-title {
-  font-family: 'Raleway', sans-serif;
-  font-size: 22px;
-  color: #ffffff;
-}
-#extTable1-44 TH {
-  font-size: 17px;
-}
-#extTable1-44 B {
-  font-size: 17px;
-}
-#extTable1-44 TD {
-  font-size: 17px;
-}
-#content5-45 .mbr-section-title,
-#content5-45 p {
-  color: #fff;
-}
-#content5-45 DIV {
-  color: #ffffff;
-}
-#content5-45 .mbr-section-title {
-  font-size: 21px;
-  font-family: 'Raleway', sans-serif;
-}
-#content5-45 .mbr-section-title SPAN {
-  font-size: 17px;
-}
-#custom-html-48 {
-  /* Type valid CSS here */
-}
-#custom-html-48 .my-image {
-  width: 100%;
-}
-#custom-html-49 {
-  /* Type valid CSS here */
-}
-#custom-html-49 .my-image {
-  width: 100%;
-}
-#msg-box1-4a H2 {
-  font-family: 'Raleway', sans-serif;
-  font-size: 22px;
-  color: #000000;
-}
-#extFeatures5-4b .mbr-iconfont-features4 {
-  color: #1141f4 !important;
-}
-#extFeatures5-4b .wraper {
-  border-color: #1141f4 !important;
-}
-#extToggle1-4c P {
-  font-size: 17px;
-}
-#extToggle1-4c H1 {
-  font-size: 25px;
-  font-family: 'Raleway', sans-serif;
-}
-#extFeatures13-4d .etl-icon {
-  color: #666666;
-}
-#extFeatures13-4d .mbr-section-subtitle {
-  font-family: 'Raleway', sans-serif;
-  font-size: 19px;
-  color: #ffffff;
-}
-#extFeatures13-4d .mbr-section-title {
-  font-family: 'Raleway', sans-serif;
-  font-size: 22px;
-  color: #ffffff;
-}
-#extFeatures13-4d H4 {
-  color: #ffffff;
-  text-align: left;
-  font-family: 'Raleway', sans-serif;
-  font-size: 17px;
-}
-#extFeatures13-4d .date P {
-  color: #f7da64;
-  font-size: 22px;
-  font-family: 'Raleway', sans-serif;
-}
-#extFeatures13-4d .mbr-section-title SPAN {
-  font-size: 19px;
-}
-#extFeatures13-4d SPAN {
-  font-family: 'Raleway', sans-serif;
-  font-size: 17px;
-}
-#extFeatures13-4d DIV {
-  font-family: 'Raleway', sans-serif;
-  font-size: 17px;
-}
-#extProgressBar5-4e H2 {
-  font-size: 25px;
-  font-family: 'Raleway', sans-serif;
-}
-#extProgressBar5-4e .progressbar-title p,
-#extProgressBar5-4e .progressbar-number,
-#extProgressBar5-4e .progressbar-number + span {
-  font-family: 'Raleway', sans-serif;
-  font-size: 17px;
-}
-#extTabs1-4f P {
-  font-size: 19px;
-  color: #ffffff;
-}
-#extTabs1-4f H3 {
-  color: #ffffff;
-}
-#footer1-4g P {
-  font-size: 14px;
-}
-
-
-
-
-
 #ext_menu-4q .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -1610,4 +1317,76 @@ h6,
 }
 #extHeader13-4s B {
   font-family: 'Lato', sans-serif;
+}
+#ext_menu-5c .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-5c .navbar-caption {
+  color: #ffffff;
+  font-size: 20px;
+}
+#ext_menu-5c .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-5c .close-icon::before,
+#ext_menu-5c .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-5c .link,
+#ext_menu-5c .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-5c .link {
+  font-size: 0.75rem;
+}
+#ext_menu-5c .dropdown-item,
+#ext_menu-5c .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-5c .link:hover,
+#ext_menu-5c .dropdown-item:hover,
+#ext_menu-5c .link:focus,
+#ext_menu-5c .dropdown-item:focus {
+  color: #e25041;
+}
+#ext_menu-5c .link[aria-expanded="true"],
+#ext_menu-5c .dropdown-menu {
+  background: #1f5087;
+}
+#ext_menu-5c .nav-dropdown-sm .link:focus,
+#ext_menu-5c .nav-dropdown-sm .link:hover,
+#ext_menu-5c .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-5c .nav-dropdown-sm .dropdown-item:hover {
+  background: #2662a4!important;
+}
+#ext_menu-5c .navbar,
+#ext_menu-5c .nav-dropdown-sm,
+#ext_menu-5c .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-5c .nav-dropdown-sm .dropdown-menu {
+  background: #2969b0;
+}
+#ext_menu-5c .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-5c .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-5c .bg-color.transparent.opened .link:hover,
+#ext_menu-5c .bg-color.transparent.opened .link:focus {
+  color: #e25041;
+}
+#ext_menu-5c .link[aria-expanded="true"],
+#ext_menu-5c .dropdown-item[aria-expanded="true"] {
+  color: #e25041!important;
+}
+#ext_menu-5c .btn {
+  font-size: 12px;
+}
+#footer1-5d P {
+  font-size: 14px;
+}
+#content1-5e P {
+  font-size: 84px;
+  text-align: center;
 }
