--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1489,10 +1489,13 @@ h6,
   font-size: 18px;
 }
 #header3-5s .mbr-section-title DIV {
-  color: #232323;
+  color: #000000;
   font-size: 17px;
 }
 #header3-5s .mbr-section-subtitle {
+  color: #000000;
+}
+#header3-5s .mbr-section-title SPAN {
   color: #000000;
 }
 #extTable1-5t .mbr-section-title {
