--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -431,7 +431,7 @@ h6,
   color: #e25041;
 }
 .scrollToTop_wraper {
-  opacity: 0 !important;
+  display: none;
 }
 .extCountdown1 .number,
 .extCountdown2 .number {
