--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1497,6 +1497,20 @@ h6,
   font-family: 'Raleway', sans-serif;
   color: #ffffff;
 }
+#extProgressBar2-6p .mbr-section-title DIV {
+  font-size: 21px;
+}
+#extProgressBar2-6p .mbr-section-title {
+  font-size: 21px;
+}
+#extProgressBar2-6p .mbr-section-title SPAN {
+  font-size: 20px;
+}
+#extProgressBar2-6p .progressbar-title p,
+#extProgressBar2-6p .progressbar-number,
+#extProgressBar2-6p .progressbar-number + span {
+  font-size: 20px;
+}
 #header3-5s .mbr-section-title,
 #header3-5s .mbr-section-subtitle {
   text-align: center;
