create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -25,9 +25,6 @@
 
 
 
-
-
-
 body,
 input,
 textarea,
@@ -790,6 +787,11 @@ h6,
   font-size: 20px;
   font-family: 'Raleway', sans-serif;
   color: #ffffff;
+}
+#extProgressBar2-6o {
+  
+  
+  
 }
 #extProgressBar2-6o .mbr-section-title {
   font-family: 'Oxygen', sans-serif;
