create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1548,11 +1548,11 @@ h6,
   font-size: 17px;
 }
 #extTable1-5t TD {
-  color: #ffffff;
+  color: #efefef;
   font-size: 17px;
 }
 #extTable1-5t B {
-  color: #f7da64;
+  color: #cccccc;
   font-size: 17px;
 }
 #extTable1-5t .mbr-section-title SPAN {
